--- a/app/views/lightnings/index.html.erb
+++ b/app/views/lightnings/index.html.erb
@@ -6,13 +6,13 @@
     <%= form_for(@lightning) do |f| %>
       <%= f.hidden_field :user_id, :value => current_user.id %>
       <div class="actions">
-        <%= f.submit "Play Lightning Mode", :class => "button" %>
+        <%= f.submit "Play Lightning Mode", :class => "button", :style => "font-size:120%" %>
       </div>
     <% end %>
   <% else %>
     <%= link_to(lightningvote_lightnings_path) do %>
       <div class="button" style="margin-bottom: 100px;">
-        Play Lightning Mode
+        <span style="color:white; font-size:120%">Play Lightning Mode</span>
       </div>
     <% end %>
   <% end %><br>
