--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -10,7 +10,7 @@
       <% end %>
     </div>
     <div id="main-messagebutton">
-    <%= image_tag("Notification-None-128.png", size: "36", alt: "Messages", class: "topbar-messagebutton") %>
+    <%= link_to(image_tag("Lightning-128.png", size: "30", alt: "Lightning Mode", class: "topbar-messagebutton"), lightnings_path) %>
     </div>
   </div>
 </div>
