lightning vote only

--- a/app/views/lightnings/_roundplay.html.erb
+++ b/app/views/lightnings/_roundplay.html.erb
@@ -33,7 +33,8 @@
           $.ajax({
                   url: "/lightnings/switchplayvote",
                   type: "POST",
-                  data: {playvote: 'vote'},
+                  data: {playvote: 'vote',
+                         lightning_id: '<%= @lightning.id %>'},
                   dataType: 'script'
                 });
         });
