lightning author show

--- a/app/assets/javascripts/page/lightningvote.js.erb
+++ b/app/assets/javascripts/page/lightningvote.js.erb
@@ -1,15 +1,21 @@
 if ($("#thumbsup1").length === 0) {
   $("#lightningvotetoplay").removeClass("disabledtoplay");
   $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+  $("#seeauthors").removeClass("disabledtoplay");
+  $("#seeauthors").text("Optional - See authors (locks in votes)");
 }
 else if (($("#thumbsup2").length === 0)) {
   $("#thumbsup1").click(function() {
     $("#lightningvotetoplay").removeClass("disabledtoplay");
     $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+    $("#seeauthors").removeClass("disabledtoplay");
+    $("#seeauthors").text("Optional - See authors (locks in votes)");
   })
   $("#thumbsdown1").click(function() {
     $("#lightningvotetoplay").removeClass("disabledtoplay");
     $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+    $("#seeauthors").removeClass("disabledtoplay");
+    $("#seeauthors").text("Optional - See authors (locks in votes)");
   })
 }
 
@@ -21,6 +27,8 @@ else if (($("#thumbsup3").length === 0)) {
     if(answer1 + answer2 == 2) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
   $("#thumbsdown1").click(function() {
@@ -28,6 +36,8 @@ else if (($("#thumbsup3").length === 0)) {
     if(answer1 + answer2 == 2) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
   $("#thumbsup2").click(function() {
@@ -35,6 +45,8 @@ else if (($("#thumbsup3").length === 0)) {
     if(answer1 + answer2 == 2) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
   $("#thumbsdown2").click(function() {
@@ -42,6 +54,8 @@ else if (($("#thumbsup3").length === 0)) {
     if(answer1 + answer2 == 2) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
 }
@@ -55,6 +69,8 @@ else {
     if(answer1 + answer2 + answer3 == 3) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
   $("#thumbsdown1").click(function() {
@@ -62,6 +78,8 @@ else {
     if(answer1 + answer2 + answer3 == 3) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
   $("#thumbsup2").click(function() {
@@ -69,6 +87,8 @@ else {
     if(answer1 + answer2 + answer3 == 3) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
   $("#thumbsdown2").click(function() {
@@ -76,6 +96,8 @@ else {
     if(answer1 + answer2 + answer3 == 3) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
   $("#thumbsup3").click(function() {
@@ -83,6 +105,8 @@ else {
     if(answer1 + answer2 + answer3 == 3) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
   $("#thumbsdown3").click(function() {
@@ -90,6 +114,8 @@ else {
     if(answer1 + answer2 + answer3 == 3) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
+      $("#seeauthors").removeClass("disabledtoplay");
+      $("#seeauthors").text("Optional - See authors (locks in votes)");
     }
   })
 }
