--- a/app/assets/javascripts/page/lightningvote.js.erb
+++ b/app/assets/javascripts/page/lightningvote.js.erb
@@ -2,20 +2,20 @@ if ($("#thumbsup1").length === 0) {
   $("#lightningvotetoplay").removeClass("disabledtoplay");
   $("#lightningvotetoplay").prop("value", "Continue to Play Round");
   $("#seeauthors").removeClass("disabledtoplay");
-  $("#seeauthors").text("Optional - See authors (locks in votes)");
+  $("#seeauthors").text("See authors");
 }
 else if (($("#thumbsup2").length === 0)) {
   $("#thumbsup1").click(function() {
     $("#lightningvotetoplay").removeClass("disabledtoplay");
     $("#lightningvotetoplay").prop("value", "Continue to Play Round");
     $("#seeauthors").removeClass("disabledtoplay");
-    $("#seeauthors").text("Optional - See authors (locks in votes)");
+    $("#seeauthors").text("See authors");
   })
   $("#thumbsdown1").click(function() {
     $("#lightningvotetoplay").removeClass("disabledtoplay");
     $("#lightningvotetoplay").prop("value", "Continue to Play Round");
     $("#seeauthors").removeClass("disabledtoplay");
-    $("#seeauthors").text("Optional - See authors (locks in votes)");
+    $("#seeauthors").text("See authors");
   })
 }
 
@@ -28,7 +28,7 @@ else if (($("#thumbsup3").length === 0)) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
   $("#thumbsdown1").click(function() {
@@ -37,7 +37,7 @@ else if (($("#thumbsup3").length === 0)) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
   $("#thumbsup2").click(function() {
@@ -46,7 +46,7 @@ else if (($("#thumbsup3").length === 0)) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
   $("#thumbsdown2").click(function() {
@@ -55,7 +55,7 @@ else if (($("#thumbsup3").length === 0)) {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
 }
@@ -70,7 +70,7 @@ else {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
   $("#thumbsdown1").click(function() {
@@ -79,7 +79,7 @@ else {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
   $("#thumbsup2").click(function() {
@@ -88,7 +88,7 @@ else {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
   $("#thumbsdown2").click(function() {
@@ -97,7 +97,7 @@ else {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
   $("#thumbsup3").click(function() {
@@ -106,7 +106,7 @@ else {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
   $("#thumbsdown3").click(function() {
@@ -115,7 +115,7 @@ else {
       $("#lightningvotetoplay").removeClass("disabledtoplay");
       $("#lightningvotetoplay").prop("value", "Continue to Play Round");
       $("#seeauthors").removeClass("disabledtoplay");
-      $("#seeauthors").text("Optional - See authors (locks in votes)");
+      $("#seeauthors").text("See authors");
     }
   })
 }
